2002-06-17  Steve Youngs  <youngs@xemacs.org>

	* Makefile (SOURCES): Add eicq-comm.el.

2002-06-16  Jack Twilley  <jmt@tbe.net>

        * eicq.el (eicq-log-buddy-message): Made smileys optional.
          (eicq-smiley): Created a configure variable in the 
          'eicq-interface' group.

2002-05-16  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-world-rc-regexp): Update regexp so we don't gobble
	whitespace.
	From Vladimir Alexiev <Vladimir@worklogic.com>.

2002-05-12  Steve Youngs  <youngs@xemacs.org>

	* icq2tcp.c: Add a "This file is part of" clause.

	* eicq-comm.el: Ditto.

	* eicq-convert.el: Ditto.

	* eicq-report.el: Ditto.

	* eicq-toolbar.el: Ditto.

	* eicq-wharf.el: Ditto.

	* eicq.el (eicq-dropped-packet-counter): Moved to eicq-comm.el.
	(eicq-resend-packet-counter): Ditto.
	(eicq-recent-packet): Ditto.
	(eicq-trimmed-packet-counter): Ditto.
	(eicq-error-packets): Ditto.
	(eicq-network): Ditto.
	(eicq-bridge): Removed.
	(eicq-connect): Moved to eicq-comm.el.
	(eicq-main-map): We don't have "bridges" anymore, we use
	"networks". 
	(eicq-main-menu): Ditto.
	(eicq-bridge-mode): Renamed to 'eicq-network-mode'.
	(eicq-bridge-kill): Removed.
	(eicq-disconnect): Bridges are now networks.
	(eicq-pack-login): Use the encrypted password from eicq-comm.el.
	(eicq-hide-window): Bridges are now networks.
	Add a "This file is part of" clause.

2002-05-11  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-bridge-filename): Removed.
	(eicq-bridge-buffer): Ditto.
	(eicq-bridge-hostname): Ditto.
	(eicq-bridge-port): Ditto.
	(eicq-local-bridge-p): Ditto.

	* eicq-comm.el: New file.

	* eicq.el (eicq-comm): Require it.

2002-04-10  Steve Youngs  <youngs@xemacs.org>

	* eicq-report.el (eicq-report-debug): Add eicq-comm.el.

2002-02-17  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-version): Boost it up to version 0.5.0 as the
	start of the ICQv7/8 series.
	(eicq-server-hostname): Change to "login.icq.com".
	(eicq-server-port): Change to 5190.
